--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ deploy_production:
     TWINE_PASSWORD: $PRODUCTION_PASSWORD
   script:
     - apk update
-    - apk add gcc
+    - apk add gcc musl-dev
     - pip install twine
     - python setup.py sdist bdist_wheel
     - twine upload dist/*
