--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@
 #    pip-compile --output-file requirements.txt requirements.in
 #
 requests==2.21.0
-opencv-contrib-python-headless>=4.1.2.30
+opencv-contrib-python-headless~=4.1.2.30
 pytest>=3.0.3
 tqdm==4.31.1
