Add config file for black
Now we don't need to specify the arguments explicitly, and it will work
correctly even with the manual run. In case we need to add some exceptions,
there's just a single place to change instead of 2+.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ black:
   stage: test
   image: kiwicom/black:19.10b0
   script:
-    - black --check --line-length 120 .
+    - black --check .
   allow_failure: true
 
 deploy_production:
