--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ deploy_production:
   script:
     - apk update
     - apk add gcc musl-dev libffi-dev libressl-dev
+    - pip install --upgrade pip
     - pip install twine
     - python setup.py sdist bdist_wheel
     - twine upload dist/*
