--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,3 +14,13 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies: [types-setuptools, types-requests]
+  - repo: local
+    hooks:
+      - id: pytest
+        name: pytest
+        entry: pytest
+        language: python
+        language_version: python3
+        additional_dependencies: [requests==2.21.0, opencv-contrib-python-headless>=4.1.2.30, pytest>=3.0.3, pytest-mock, tqdm==4.31.1]
+        always_run: true
+        pass_filenames: false
