Let twine upload the packages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,5 +43,5 @@ deploy:
     - apk update
     - apk add gcc musl-dev python3-dev libffi-dev openssl-dev cargo
     - pip install twine
-    - echo twine upload dist/*
+    - twine upload dist/*
 
