Run pylint on ximilar/client2
I don't want to fix everything in the old client, but it's good to have maximum
checks for the new one.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,10 @@
 [tool.black]
 line-length = 120
+
+[tool.pylint.'FORMAT']
+max-line-length = 120
+
+[tool.pylint.TYPECHECK]
+ignored-classes = [
+    "socket",
+]
