--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,11 @@ repos:
         additional_dependencies: [requests==2.21.0, opencv-contrib-python-headless>=4.1.2.30, pytest>=3.0.3, pytest-mock, tqdm==4.31.1]
         always_run: true
         pass_filenames: false
+  - repo: https://github.com/pycqa/pylint
+    rev: v2.11.1
+    hooks:
+      - id: pylint
+        additional_dependencies: [requests==2.21.0, opencv-contrib-python-headless>=4.1.2.30, pytest>=3.0.3, pytest-mock, tqdm==4.31.1]
+        args: ["ximilar/client2", "tests/client2"]
+        always_run: true
+        pass_filenames: false
